Remove em dash symbols for more natural tone

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarang Goyal — Data Scientist & Product Strategist</title>
+    <title>Tarang Goyal | Data Scientist & Product Strategist</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
                 I don't just analyze data. <br>
                 I build <span class="gradient-text">AI-powered products</span> with it.
             </h1>
-            <p class="hero-subtitle">AI/ML Engineer & Data Scientist with 2+ years building intelligent systems, predictive models, and AI-driven products — combining deep learning expertise with product strategy to ship solutions that scale.</p>
+            <p class="hero-subtitle">AI/ML Engineer & Data Scientist with 2+ years building intelligent systems, predictive models, and AI-driven products. Combining deep learning expertise with product strategy to ship solutions that scale.</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">See My Wins ↓</a>
                 <a href="#contact" class="btn btn-secondary">Let's Talk</a>
@@ -72,7 +72,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>Most data scientists analyze. <strong>I build AI systems that analyze, predict, and automate.</strong> After years of building ML pipelines, AI-powered analytics, and predictive models at Box and Hashroot, I started combining AI/ML expertise with product thinking to ship intelligent solutions.</p>
-                    <p>I'm fluent in AI/ML frameworks — <strong>XGBoost, Neural Networks, NLP, LLMs, Deep Learning</strong> — and I use them daily not just for analysis, but for building real AI products: churn prediction systems, real-time AI dashboards, automated ML pipelines, and intelligent analytics platforms.</p>
+                    <p>I'm fluent in AI/ML frameworks like <strong>XGBoost, Neural Networks, NLP, LLMs, Deep Learning</strong> and I use them daily not just for analysis, but for building real AI products: churn prediction systems, real-time AI dashboards, automated ML pipelines, and intelligent analytics platforms.</p>
                     <p>My approach is simple: <strong>deep AI/ML expertise meets product-driven execution.</strong> I understand AI systems because I build them from scratch. That's how you reduce churn by 12%, increase feature adoption by 15%, and win hackathons building AI security platforms.</p>
                 </div>
                 <div class="terminal-window">
@@ -83,7 +83,7 @@
                         <div class="terminal-title">tarang@portfolio ~ /recent-work</div>
                     </div>
                     <div class="terminal-body">
-<span class="comment"># Recent workflow — fully automated</span>
+<span class="comment"># Recent workflow (fully automated)</span>
 
 <span class="prompt">$</span> python churn_pipeline.py <span class="flag">--model</span> cox_hazards
 <span class="output">→ Analyzing 100K+ accounts...</span>
@@ -157,7 +157,7 @@
         <div class="container">
             <div class="section-header">// COMPETITION WINS</div>
             <h2 class="section-title">Hackathon Victories</h2>
-            <p class="section-subtitle">Award-winning solutions built under pressure — 1st place finishes across AI, product, and analytics challenges.</p>
+            <p class="section-subtitle">Award-winning solutions built under pressure. 1st place finishes across AI, product, and analytics challenges.</p>
 
             <div class="project-list">
                 <div class="project-card">
@@ -168,7 +168,7 @@
                     <div class="project-terminal">
                         <div class="terminal-header">
                             <div class="terminal-dots"><span></span><span></span><span></span></div>
-                            <div class="terminal-title">// A10 AI Security — output</div>
+                            <div class="terminal-title">// A10 AI Security output</div>
                         </div>
                         <div class="terminal-body">
 <span class="output">threat_detection: <span class="success">95%</span> accuracy</span>
@@ -186,13 +186,13 @@
 
                 <div class="project-card">
                     <div class="project-label">AWS HACKATHON</div>
-                    <h3>Studentlytics — Real-Time Engagement Platform</h3>
+                    <h3>Studentlytics: Real-Time Engagement Platform</h3>
                     <div class="project-subtitle">AWS X INRIX 2025 Hackathon</div>
                     <p>Built a full web application that measures real-time student engagement (attendance tracking, attention scoring, drop-off detection) using video analytics + backend logic. Delivered the entire system from UX flow to ML logic and deployment within 24 hours.</p>
                     <div class="project-terminal">
                         <div class="terminal-header">
                             <div class="terminal-dots"><span></span><span></span><span></span></div>
-                            <div class="terminal-title">// Studentlytics — deployment</div>
+                            <div class="terminal-title">// Studentlytics deployment</div>
                         </div>
                         <div class="terminal-body">
 <span class="output">features: Attendance + Attention + Drop-off</span>
@@ -210,19 +210,19 @@
 
                 <div class="project-card">
                     <div class="project-label">ANALYTICS COMPETITION</div>
-                    <h3>SCU Analytical Showdown — Fall 2025</h3>
+                    <h3>SCU Analytical Showdown (Fall 2025)</h3>
                     <div class="project-subtitle">Santa Clara University Analytics Competition</div>
                     <p>Performed deep analytics and forecasting for Nazava's business case, including data cleaning, segmentation, ML modeling, and ROI analysis. Showcased advanced analytical expertise by synthesizing complex datasets, uncovering actionable insights, and presenting data-driven recommendations that secured top recognition.</p>
                     <div class="project-terminal">
                         <div class="terminal-header">
                             <div class="terminal-dots"><span></span><span></span><span></span></div>
-                            <div class="terminal-title">// Nazava Analytics — output</div>
+                            <div class="terminal-title">// Nazava Analytics output</div>
                         </div>
                         <div class="terminal-body">
 <span class="output">dataset: Nazava business case</span>
 <span class="output">analysis: Segmentation + ML + ROI</span>
 <span class="output">insights: <span class="success">Actionable recommendations</span></span>
-<span class="output">result: <span class="success">Winner — Fall 2025</span></span>
+<span class="output">result: <span class="success">Winner (Fall 2025)</span></span>
                         </div>
                     </div>
                     <div class="project-tags">
@@ -321,7 +321,7 @@
         <div class="container">
             <div class="section-header">// GET IN TOUCH</div>
             <h2 class="section-title">Let's Connect</h2>
-            <p class="section-subtitle">Whether you're hiring, looking to collaborate, or want to talk data science & product — I'm all ears.</p>
+            <p class="section-subtitle">Whether you're hiring, looking to collaborate, or want to talk data science & product, I'm all ears.</p>
 
             <div class="contact-grid">
                 <a href="mailto:taranggoyal2000@gmail.com" class="contact-card">
